--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        div {
+            margin: 50px;
+            display:inline-block;
+        }
+        .square {
+            width:300px;
+            height: 300px;
+            background-color: brown;
+        }
+        .rectangle{
+            width: 500px;
+            height: 300px;
+            background-color: aqua;
+        }
+        .circle{
+            width: 300px;
+            height: 300px;
+            background:#00ff00;
+            border: radius 50%;
+        }
+        .oval {
+            width: 500px;
+            height: 300px;
+            background: #d95eb6;
+            border-radius: 70%;
+        }
+    </style>
+</head>
+<body>
+    <div class="square"></div>
+    <div class="rectangle"></div>
+    <div class="circle"></div>
+    <div class="oval"></div
+        
+</body>
+</html>
